# lt-catalog

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/scheduler/: Dockerfile  entrypoint.sh
library_data/: config.py
library_data/lib/: isbn_utils.py  lib_catalog.py
library_data/scripts/: capture_playwright_state.py  enrich_levels.py  export_lt.py  ingest.py  nightly.py  query.py  settings.py
scripts/: capture_playwright_state.py  enrich_levels.py  export_lt.py  ingest.py  isbn_utils.py  lib_catalog.py  settings.py
